change chart color and fix text overlappin

--- a/docs/css/chart-for-map-vis.css
+++ b/docs/css/chart-for-map-vis.css
@@ -1,4 +1,5 @@
 #chart-for-map-vis {
+  margin-top: 20px;
   position: absolute;
   left: 52%;
   top: 27%;
